--- a/ST558_Project1.qmd
+++ b/ST558_Project1.qmd
@@ -36,12 +36,11 @@ PUMS20235Y
 ## Functions
 
 
-Helper function to take what is returned by GET() and turn it into a tibble
+### Helper function to take what is returned by GET() and turn it into a tibble
 
 ```{r}
 
 
-  
   URL_ids <- "api.census.gov/data/2023/acs/acs5/pums?get=SEX,PWGTP,MAR&for=state:1&SCHL=24"
   id_info <- httr::GET(URL_ids)
 
@@ -54,6 +53,42 @@ create_tibble_helper <- function(id_info) {
 create_tibble_helper(id_info)
 
 
+```
+
+Continuing work on the API function
+Write a function to query the API that allows the user to change the following items:
+Done – Year of survey (2022 as default). *Only a single value here*
+∗ Check that a valid value was given (number between 2010 and 2022)
+3
+– Specify the numeric variables to be returned (AGEP and PWGTP as default). PWGTP should
+always be returned.
+∗ Options for the user should be AGEP, GASP, GRPIP, JWAP (time), JWDP (time), and
+JWMNP
+∗ Your function should turn variables into numeric values or time values (use the middle of the
+time period) where appropriate.
+∗ One numeric variable other than PWGTP must be returned
+
+```{r}
+
+# function that build API URL with user input for year
+  
+API_URL_builder <- function(year = 2022){
+  #code that takes user inputs and concatenates them into a string that becomes the URL, year must be between 2010 - 2022 and cannot be a decimal like 2015.5
+  if ( year < 2010 | year > 2022 | year %% 1 != 0){
+     stop("not an accepted year")
+     return(NA)
+   }
+  
+  API_URL <- paste0("https://api.census.gov/data/", year, "/acs/acs1/pums?get=SEX,PWGTP,MAR&for=state:1" )
+  return(API_URL)
+  
+}
+  
+API_URL_builder(2015)
+  
+
+
+  
 ```
 
 ## Investigation using function
