Added Geo_level functionality to URL API Builder.

--- a/ST558_Project1.qmd
+++ b/ST558_Project1.qmd
@@ -175,7 +175,6 @@ API_Year_NumericVar_Builder <- function(year = 2022, numvars = "AGEP", catvars =
         stop("Please enter a valid categorical variable.")
       catvars_comb <- paste(catvars, collapse = ",")
       
-      
   #numvars = c("AGEP", "GASP", "GRPIP", "JWAP", "JWDP", "JWMNP")
   API_URL <- paste0("https://api.census.gov/data/", year, "/acs/acs1/pums?get=PWGTP,",numvars_comb,",",catvars_comb,"&for=state:1" )
 
@@ -192,30 +191,26 @@ API_Year_NumericVar_Builder(2015, numvars = c("AGEP","GASP","GRPIP"), catvars = 
 
 ### API Geography
 
-– Specify the geography level: All, Region, Division, or State (with the default of All)
-∗ Check that the value specified by the user is one of the above values
-– An optional argument to subset the data (this subsetting should be on the API call itself, not on
-what is returned - see the examples in the links above)
-∗ User should be able to specify specific Regions, Divisions, or States for this part (and only
-those specified geography levels would be returned)
-∗ How you allow them to specify this is up to you (you’ll have to parse it appropriately)
-Note: 
-- So when you go to do a filter on your data download, have the default subset to the state assigned to your group (state ) (the user should be able to change this if they'd like). 
-- what I meant by all is the 'default' geography: If they specify something like division they can also specify a geo code (say for division 1 only). If they don't give the geo code then it should just be all of the divisions. 
+(Internal note: this includes all code from chunks above (minus the tibble builder). We can eventually delete the older chunks above, but for now they show my progression in building this function.)
+
+Geographic functionality for API_URL_Builder function. 
+∗ User specifies individual regions, division, or states, as well as all regions, divisions, or states. If user selection for region, division, or state subset is left blank, the default selection is all regions, all divisions, or state 08 (Colorado). 
+
 
 ```{r}
 # function that builds API URL with user input for numeric, categorical, and geographic variable options
-# Needs a lot more work
 
-API_Year_NumericVar_Builder <- function(year = 2022, numvars = "AGEP", catvars = "SEX", geo_level = "state",geo_subset = "8"){
+
+API_URL_Builder <- function(year = 2022, numvars = "AGEP", catvars = "SEX", geo_level = "state",geo_subset = "08"){
       if ( year < 2010 | year > 2022 | year %% 1 != 0){
      stop("Please enter a valid year between 2010 and 2022.")
+     #return(NA)
       }
   
       # add numeric and categorical variable user options
       var_options <- c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP","SEX", "FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL")
       
-      # make sure all user selections are in allowed list of options
+      #make sure all user choices are in allowed list of options
       if (!all(numvars %in% var_options)) 
         stop("Please enter a valid numeric variable.")
   
@@ -227,42 +222,74 @@ API_Year_NumericVar_Builder <- function(year = 2022, numvars = "AGEP", catvars =
       
       # add categorical variable user options
       
-      # make sure all user choices are in allowed list of options
+      #make sure all user choices are in allowed list of options
       if (!all(catvars %in% var_options)) 
         stop("Please enter a valid categorical variable.")
       catvars_comb <- paste(catvars, collapse = ",")
       
+      
       # add Geographic user options
-      #specify the geographic levels, with default of all
+      
+      # allowable region, division, and state codes
+      region_code_options <-c("1","2","3","4", "*")
+      division_code_options <- c("1","2","3","4","5","6","7","8","9", "*")
+      state_code_options <- c("01","49","21","26","29","32","34","08","51","39",
+                          "02","46","04","06","55","15","22","30","47","48",
+                          "09","50","53","17","20","35","36","10","11","12",
+                          "56","16","25","27","42","45","13","23","24","28",
+                          "37","41","05","19","31","33","44","54","18","38",
+                          "40", "*")
+                          #PR 72 not included
+      
+      #specify the geo_levels, with default of all
       geo_level_options <- c("all", "region", "division", "state")
       # Check that the value specified by the user is one of the above values
       if (!all(geo_level %in% geo_level_options)) 
         stop("Please enter a valid Geography.")
       
- 
+      # if geo_subset is missing, set defaults
+if (missing(geo_subset) | length(geo_subset) == 0 | geo_subset == "") {
+  if (geo_level == "state") geo_subset <- "08"
+  if (geo_level == "region") geo_subset <- "*"
+  if (geo_level == "division") geo_subset <- "*"
+}
 
+      # note to self: consider using && instead of &
+      if (geo_level == "region" && !geo_subset %in% region_code_options) {
+  stop("Not a valid Region code. Region code must be 1–4")
+      }
+      if (geo_level == "division" && !geo_subset %in% division_code_options) {
+  stop("Not a valid Division code. Division code must be 1–9")
+      }
+      if (geo_level == "state" && !geo_subset %in% state_code_options) {
+  stop("Not a valid State code")
+}
+     
+      # build URL
   API_URL <- paste0("https://api.census.gov/data/", year, "/acs/acs1/pums?get=PWGTP,",numvars_comb,",",catvars_comb,"&for=",geo_level, ":", geo_subset)
+  
   return(API_URL)
   
-}
-# this works but functionality needs more work
-API_Year_NumericVar_Builder(2015, numvars = c("AGEP","GASP","GRPIP"), catvars = c("FER", "HHL"), geo_level = c("state"), geo_subset = c("8"))
-
-
-```
-```{r}
-# testing allowable options for geographies
-
-region_codes <- c("1","Northeast","3","South","2","Midwest","4","West")
   
-division_codes <- c("7","West South Central (South Region)","2","Middle Atlantic (Northeast region)","4","West North Central (Midwest region)","6","East South Central (South region)","3","East North Central (Midwest region)","9","Pacific (West region)","0","Puerto Rico","5","South Atlantic (South region)","8","Mountain (West region)","1","New England (Northeast region)")
-
-state_codes <- c("01", "Alabama", "AL","49", "Utah", "UT", "21", "Kentucky", "KY","08","Colorado","CO")
-
+}
 
 
 
 ```
+
+
+```{r}
+# use function
+API_URL_Builder(2015, numvars = c("AGEP","GASP","GRPIP"), catvars = c("FER", "HHL"), geo_level = c("state"), geo_subset = c(""))
+
+API_URL_Builder(2015, numvars = c("AGEP","GASP","GRPIP"), catvars = c("FER", "HHL"), geo_level = c("state"), geo_subset = c("55"))
+
+```
+
+```{r}
+
+```
+
 
 ## Investigation using function
 
