--- a/ST558_Project1.qmd
+++ b/ST558_Project1.qmd
@@ -319,7 +319,7 @@ MultiYear_API_Builder <- function(years, numvars = "AGEP", catvars = "SEX", geo_
   #____________________________________________________________________________________
   #wrangle data
   
-  # numerical data /will also add the one that is only minutes here
+  # numerical data (I tried to do a fancier loop but couldn't make it worK)
   for (i in seq_along(final)) {
     if (colnames(final)[i] == "PWGTP") {
     final$PWGTP <- as.integer(final$PWGTP)
@@ -330,23 +330,50 @@ MultiYear_API_Builder <- function(years, numvars = "AGEP", catvars = "SEX", geo_
     if (colnames(final)[i] == "GASP") {
       final$GASP <- as.integer(final$GASP)
     }
-    if (colnames(practice_data)[i] == "GRPIP") {
+    if (colnames(final)[i] == "GRPIP") {
       final$GRPIP <- as.integer(final$GRPIP)
     }
+    if (colnames(final)[i] == "JWMP") { #this one is number of minutes
+      final$JWMP <- as.integer(final$JWMP)
+    }
+  }
   
-}
+  # categorical data: HISPEED, JWTRNS, SCH, SCHL, and SEX 
+  for (i in seq_along(final)) {
+    if (colnames(final)[i] == "FER") {
+    final$FER <- as.factor(final$FER)
+    }
+    if (colnames(final)[i] == "HHL") {
+      final$HHL <- as.factor(final$HHL)
+    }
+    if (colnames(final)[i] == "HISPEED") {
+      final$HISPEED <- as.factor(final$HISPEED)
+    }
+    if (colnames(final)[i] == "JWTRNS") {
+      final$JWTRNS <- as.factor(final$JWTRNS)
+    }
+    if (colnames(final)[i] == "SCH") {
+      final$SCH <- as.factor(final$SCH)
+    }
+    if (colnames(final)[i] == "SCHL") {
+      final$SCHL <- as.factor(final$SCHL)
+    }
+    if (colnames(final)[i] == "SEX") {
+      final$SEX <- as.integer(final$SEX)
+    }
+  }
   
   # time data - I spent a lot of time on this but didn't really get anywhere. The codes that correspond to the times are store as rownames and I couldn't fix it.
   
-  #Parsing JWAP time data
-URL_JWAP <- "https://api.census.gov/data/2022/acs/acs1/pums/variables/JWAP.json"
-JWAP_key_raw <- httr::GET(URL_JWAP)
+  #Parsing JWAP time data even after talking to dr post this isn't right. I emaield him again.
+#URL_JWAP <- "https://api.census.gov/data/2022/acs/acs1/pums/variables/JWAP.json"
+#WAP_key_raw <- httr::GET(URL_JWAP)
 
-
-JWAP_key_char <- fromJSON(rawToChar(JWAP_key_raw$content),flatten = TRUE)
-JWAP_key <- as_tibble(JWAP_key_char$values, rownames = "code")
-str(JWAP_key)
-
+#JWAP_key_char <- fromJSON(rawToChar(JWAP_key_raw$content))
+#JWAP_key <- dplyr::as_tibble(JWAP_key_char$values |> unlist()) #from prof
+#JWAP_key
+  
+  So WE NEED TO MAKE REGION INTO INTEGER?
   
   #____________________________________________________________________________________
   return(final)
@@ -367,8 +394,26 @@ MultiYear_API_Builder(years = c(2015,2016), numvars = c("AGEP","GASP","GRPIP"), 
 ```
 
 Summary function with means and sds of numvars and counts of catvars
+
+For the census summary method, let’s write a function that produces means and standard deviations for
+our numeric variable(s) and counts for our categorical variable(s).
+• This function should take three arguments: the tibble with class census, the numeric variable(s) to
+summarize, the categorical variable(s) to summarize.
+• By default, it should summarize all numeric variables (other than PWGTP) and all categorical variables
+in the tibble. However, the user should be able to specify the variables they’d like to summarize if
+they’d like.
+– To find a sample mean for a numeric variable, we would do something like this:
+sum(numeric_vector*weight_vector)/sum(weight_vector)
+– To find a sample standard deviation:
+sqrt(sum(numeric_vectorˆ2*weight_vector)/sum(weight_vector)-sample_meanˆ2)
+– Return the values as a named list
+Test out this function by running summary(_your_census_tibble_) on something you’ve returned from
+your census API function.
+S
 ```{r}
-summary.census <- function(API_tibble, numvars = c(all), catvars = c(all)) {
+
+summary.census <- function(API_tibble, 
+                           numvars = c("AGEP","GASP","GRPIP","JWAP","JWDP","JWMNP"),      catvars = c("FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL", "SEX")) {
   loop through columns in tibble
   calculate column summaries based on column type
   add to list
@@ -381,22 +426,22 @@ Plot function for census class tibble
 plot.census <- function(census_tibble, numvar, catvar) {
   
   #check tibble 
-  if (class(census_tibble)[1] != "census" | is_tibble(census_tibble) != TRUE) {
-     stop("Please enter a valid census-class tibble")
-     return(NA)
-  }
+#  if (class(census_tibble)[1] != "census" | is_tibble(census_tibble) != TRUE) {
+#     stop("Please enter a valid census-class tibble")
+#     return(NA)
+#  }
   
   #check numvar
-  numvar_options <- c("AGEP", "GASP", "GRPIP", "JWAP", "JWDP", "JWMNP")
-  if(numvar %in% numvar_options != TRUE) {
-    stop("Please enter one valid numeric variable")
-  }
+#  numvar_options <- c("AGEP", "GASP", "GRPIP", "JWAP", "JWDP", "JWMNP")
+#  if(numvar %in% numvar_options != TRUE) {
+#    stop("Please enter one valid numeric variable")
+#  }
   
   #check catvar
-  catvar_options <- c("FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL", "SEX")
-  if(catvar %in% catvar_options != TRUE) {
-    stop("Please enter one valid categorical variable")
-  }
+#  catvar_options <- c("FER", "HHL", "HISPEED", "JWTRNS", "SCH", "SCHL", "SEX")
+#  if(catvar %in% catvar_options != TRUE) {
+#    stop("Please enter one valid categorical variable")
+#  }
     
   ggplot(census_tibble,
          aes(x = get(catvar), y = get(numvar), weight = PWGTP)) +
@@ -404,7 +449,7 @@ plot.census <- function(census_tibble, numvar, catvar) {
 }
 ```
 
-Try out plot function for census class tibble (need data to be parsed before testing)
+Try out plot function for census class tibble
 ```{r}
 data_for_plot <- MultiYear_API_Builder(years = c(2015,2016), numvars = c("AGEP","GASP","GRPIP"), catvars = c("FER", "HHL"), geo_level = c("region"), geo_subset = c("2"))
 
